Integracao Supabase completa: Auth, CRUD com Edicao, Upload e Traducao Automatica

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
         <img src="" alt="" class="lightbox__image" id="lightbox-image">
     </div>
 
+    <!-- Supabase SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
 </body>
 
