--- a/admin.html
+++ b/admin.html
@@ -250,6 +250,9 @@
         <!-- Auth Section -->
         <div id="auth-section" class="card" style="max-width: 400px; margin: 2rem auto;">
             <h2>🔐 Login Admin</h2>
+            <div id="login-error" class="alert alert-danger"
+                style="display: none; background: rgba(220, 53, 69, 0.2); border: 1px solid #dc3545; color: #fff; padding: 0.75rem; font-size: 0.85rem; margin-bottom: 1rem;">
+            </div>
             <form id="login-form">
                 <div class="form-group">
                     <label>Email</label>
@@ -392,12 +395,31 @@
 
         let isEditing = false;
 
+        // Whitelist - Coloque aqui o email autorizado
+        const ALLOWED_EMAIL = 'p.morgado1982@gmail.com'; // Exemplo, o utilizador deve confirmar
+
         // AUTH CHECK
         async function checkUser() {
-            const { data: { session } } = await supabase.auth.getSession();
-            if (session) {
-                showAdmin();
-            } else {
+            try {
+                const { data: { session }, error } = await supabase.auth.getSession();
+                if (error) throw error;
+
+                if (session) {
+                    const userEmail = session.user.email;
+                    // Se quiser restringir a um email específico, descomente as linhas abaixo:
+                    /*
+                    if (userEmail !== ALLOWED_EMAIL) {
+                        alert('Acesso negado para: ' + userEmail);
+                        await supabase.auth.signOut();
+                        return;
+                    }
+                    */
+                    showAdmin();
+                } else {
+                    showAuth();
+                }
+            } catch (err) {
+                console.error('Session check error:', err);
                 showAuth();
             }
         }
@@ -433,9 +455,13 @@
         }
 
         async function handleGoogleLogin() {
+            const errorEl = document.getElementById('login-error');
+            errorEl.style.display = 'none';
+
             console.log('Iniciando login com Google...');
             if (window.location.protocol === 'file:') {
-                alert('O login do Google não funciona abrindo o ficheiro diretamente (file://). \n\nPor favor, use o link do site no Cloudflare ou um servidor local (localhost).');
+                errorEl.textContent = '❌ Erro: O login do Google não funciona via file://. Use o link do Cloudflare.';
+                errorEl.style.display = 'block';
                 return;
             }
 
@@ -445,7 +471,10 @@
                     redirectTo: window.location.origin + window.location.pathname
                 }
             });
-            if (error) alert('Erro ao entrar com Google: ' + error.message);
+            if (error) {
+                errorEl.textContent = '❌ Erro Google: ' + error.message;
+                errorEl.style.display = 'block';
+            }
         }
 
         // Event Listeners
