Refactor: Extracted admin JS to separate file with better error handling

--- a/admin.html
+++ b/admin.html
@@ -381,314 +381,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <script>
-        console.log('Admin Script: Iniciando...');
-        // CONFIG
-        const SUPABASE_URL = 'https://yjayutnbxfblzndtvqae.supabase.co';
-        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlqYXl1dG5ieGZibHpuZHR2cWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjczMDAxMDQsImV4cCI6MjA4Mjg3NjEwNH0.JoD9XpHyRRL0bMZeIvKVtzriEIfqPm8EBAvNJ5bQtBA';
-
-        let supabase;
-        const diagStatus = document.getElementById('sys-status');
-
-        function logDiag(msg) {
-            console.log('[DIAG]', msg);
-            diagStatus.innerHTML += '<br>' + msg;
-            diagStatus.parentElement.style.borderColor = '#d4a574';
-        }
-
-        try {
-            logDiag('Iniciando script...');
-            if (!window.supabase) throw new Error('SDK do Supabase não carregado (window.supabase is undefined)');
-            supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-            logDiag('Supabase inicializado com sucesso.');
-        } catch (e) {
-            console.error('Erro ao inicializar Supabase:', e);
-            logDiag('❌ ERRO CRÍTICO: ' + e.message);
-            diagStatus.parentElement.style.borderColor = 'red';
-            diagStatus.parentElement.style.background = '#300';
-            alert('Erro crítico: ' + e.message);
-        }
-
-        // Elements
-        const authSection = document.getElementById('auth-section');
-        const adminContent = document.getElementById('admin-content');
-        const loginForm = document.getElementById('login-form');
-        const productForm = document.getElementById('product-form');
-        const productsList = document.getElementById('products-list');
-        const countEl = document.getElementById('count');
-        const successAlert = document.getElementById('success-alert');
-        const uploadStatus = document.getElementById('upload-status');
-        const formTitle = document.getElementById('form-title');
-        const submitBtn = document.getElementById('submit-btn');
-        const cancelBtn = document.getElementById('cancel-edit');
-
-        let isEditing = false;
-
-        // Whitelist - Coloque aqui o email autorizado
-        const ALLOWED_EMAIL = 'admin@okapadesign.com';
-
-        // AUTH CHECK
-        async function checkUser() {
-            try {
-                const { data: { session }, error } = await supabase.auth.getSession();
-                if (error) throw error;
-
-                if (session) {
-                    const userEmail = session.user.email;
-
-                    // Restrição de Segurança: Apenas o email autorizado pode entrar
-                    if (userEmail !== ALLOWED_EMAIL) {
-                        alert('⛔ Acesso negado! O email ' + userEmail + ' não tem permissão de administrador.');
-                        await supabase.auth.signOut();
-                        return;
-                    }
-
-                    showAdmin();
-                } else {
-                    showAuth();
+        // GLOBAL ERROR HANDLER
+        window.onerror = function (msg, url, line, col, error) {
+            const diagStatus = document.getElementById('sys-status');
+            const box = document.getElementById('diag-bar');
+            if (diagStatus) {
+                diagStatus.innerHTML = '❌ ERRO: ' + msg;
+                if (box) {
+                    box.style.borderColor = 'red';
+                    box.style.background = '#500';
                 }
-            } catch (err) {
-                console.error('Session check error:', err);
-                showAuth();
             }
-        }
-
-        function showAdmin() {
-            authSection.style.display = 'none';
-            adminContent.style.display = 'block';
-            loadProducts();
-        }
-
-        function showAuth() {
-            authSection.style.display = 'block';
-            adminContent.style.display = 'none';
-        }
-
-        // LOGIN
-        loginForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            logDiag('Tentativa de login iniciada...');
-            const email = document.getElementById('login-email').value;
-            const password = document.getElementById('login-password').value;
-
-            logDiag('Autenticando...');
-            const { error } = await supabase.auth.signInWithPassword({ email, password });
-            if (error) {
-                logDiag('❌ Erro no login: ' + error.message);
-                alert('Erro no login: ' + error.message);
-            } else {
-                logDiag('✅ Login sucesso! Redirecionando...');
-                showAdmin();
-            }
-        });
-
-        async function handleLogout() {
-            await supabase.auth.signOut();
-            showAuth();
-        }
-
-        async function handleGoogleLogin() {
-            const errorEl = document.getElementById('login-error');
-            errorEl.style.display = 'none';
-
-            console.log('Iniciando login com Google...');
-            if (window.location.protocol === 'file:') {
-                errorEl.textContent = '❌ Erro: O login do Google não funciona via file://. Use o link do Cloudflare.';
-                errorEl.style.display = 'block';
-                return;
-            }
-
-            const { error } = await supabase.auth.signInWithOAuth({
-                provider: 'google',
-                options: {
-                    redirectTo: window.location.origin + window.location.pathname
-                }
-            });
-            if (error) {
-                errorEl.textContent = '❌ Erro Google: ' + error.message;
-                errorEl.style.display = 'block';
-            }
-        }
-
-        // Event Listeners
-        document.getElementById('google-login-btn').addEventListener('click', handleGoogleLogin);
-
-        // PRODUCTS CRUD
-        async function loadProducts() {
-            const { data, error } = await supabase
-                .from('products')
-                .select('*')
-                .order('created_at', { ascending: false });
-
-            if (error) {
-                console.error(error);
-                return;
-            }
-
-            countEl.textContent = data.length;
-            if (data.length === 0) {
-                productsList.innerHTML = '<div class="empty">Nenhum produto cadastrado</div>';
-                return;
-            }
-
-            productsList.innerHTML = data.map(p => `
-                <div class="product-item">
-                    <img src="${p.image_url}" alt="${p.title}" onerror="this.src='https://placehold.co/60x60/1a1a1a/d4a574?text=IMG'">
-                    <div class="product-info">
-                        <h4>${p.title} ${p.title_en ? '<span class="edit-badge">EN</span>' : ''}</h4>
-                        <p>${p.type || p.category} • €${p.price}</p>
-                    </div>
-                    <div style="display: flex; gap: 0.5rem;">
-                        <button class="btn" style="background: #333;" onclick="editProduct('${p.id}')">✏️</button>
-                        <button class="btn btn-danger" onclick="deleteProduct('${p.id}')">🗑</button>
-                    </div>
-                </div>
-            `).join('');
-        }
-
-        async function deleteProduct(id) {
-            if (confirm('Tem certeza que deseja apagar este produto?')) {
-                const { error } = await supabase.from('products').delete().eq('id', id);
-                if (error) alert(error.message);
-                else loadProducts();
-            }
-        }
-
-        function editProduct(id) {
-            // Find product in current list or fetch
-            supabase.from('products').select('*').eq('id', id).single().then(({ data }) => {
-                if (data) {
-                    isEditing = true;
-                    formTitle.textContent = '✏️ Editar Produto';
-                    submitBtn.textContent = 'Atualizar Produto';
-                    cancelBtn.style.display = 'inline-flex';
-
-                    document.getElementById('product-id').value = data.id;
-                    document.getElementById('title').value = data.title;
-                    document.getElementById('titleEn').value = data.title_en || '';
-                    document.getElementById('category').value = data.category;
-                    document.getElementById('type').value = data.type || '';
-                    document.getElementById('typeEn').value = data.type_en || '';
-                    document.getElementById('price').value = data.price;
-                    document.getElementById('desc').value = data.description || '';
-                    document.getElementById('descEn').value = data.description_en || '';
-                    document.getElementById('image-url').value = data.image_url || '';
-
-                    window.scrollTo({ top: 0, behavior: 'smooth' });
-                }
-            });
-        }
-
-        cancelBtn.onclick = () => {
-            isEditing = false;
-            formTitle.textContent = '➕ Adicionar Produto';
-            submitBtn.textContent = 'Salvar Produto';
-            cancelBtn.style.display = 'none';
-            productForm.reset();
-            document.getElementById('product-id').value = '';
+            // Retornar false para que o erro ainda apareça na consola
+            return false;
         };
-
-        // FORM SUBMISSION
-        productForm.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            submitBtn.disabled = true;
-            submitBtn.textContent = 'A processar...';
-
-            let imageUrl = document.getElementById('image-url').value;
-            const fileInput = document.getElementById('image-file');
-
-            // Handle Image Upload if file selected
-            if (fileInput.files.length > 0) {
-                const file = fileInput.files[0];
-                const fileExt = file.name.split('.').pop();
-                const fileName = `${Math.random().toString(36).substring(2)}.${fileExt}`;
-                const filePath = `${fileName}`;
-
-                uploadStatus.textContent = '⏳ Fazendo upload da imagem...';
-
-                const { error: uploadError } = await supabase.storage
-                    .from('product-images')
-                    .upload(filePath, file);
-
-                if (uploadError) {
-                    alert('Erro no upload: ' + uploadError.message);
-                    submitBtn.disabled = false;
-                    submitBtn.textContent = 'Salvar Produto';
-                    return;
-                }
-
-                const { data: { publicUrl } } = supabase.storage
-                    .from('product-images')
-                    .getPublicUrl(filePath);
-
-                imageUrl = publicUrl;
-            }
-
-            const productData = {
-                title: document.getElementById('title').value,
-                title_en: document.getElementById('titleEn').value,
-                category: document.getElementById('category').value,
-                type: document.getElementById('type').value,
-                type_en: document.getElementById('typeEn').value,
-                price: parseFloat(document.getElementById('price').value),
-                description: document.getElementById('desc').value,
-                description_en: document.getElementById('descEn').value,
-                image_url: imageUrl
-            };
-
-            let error;
-            if (isEditing) {
-                const id = document.getElementById('product-id').value;
-                const { error: err } = await supabase
-                    .from('products')
-                    .update(productData)
-                    .eq('id', id);
-                error = err;
-            } else {
-                const { error: err } = await supabase
-                    .from('products')
-                    .insert([productData]);
-                error = err;
-            }
-
-            if (error) {
-                alert('Erro ao salvar: ' + error.message);
-            } else {
-                successAlert.style.display = 'block';
-                setTimeout(() => successAlert.style.display = 'none', 3000);
-                cancelBtn.click(); // Reset form
-                loadProducts();
-            }
-
-            submitBtn.disabled = false;
-            uploadStatus.textContent = '';
-        });
-
-        // AUTO TRANSLATION (MyMemory API)
-        async function translateText(sourceId, targetId) {
-            const text = document.getElementById(sourceId).value;
-            if (!text) return;
-
-            const btn = event.target;
-            const originalText = btn.textContent;
-            btn.textContent = '...';
-            btn.disabled = true;
-
-            try {
-                const response = await fetch(`https://api.mymemory.translated.net/get?q=${encodeURIComponent(text)}&langpair=pt|en`);
-                const data = await response.json();
-                if (data.responseData) {
-                    document.getElementById(targetId).value = data.responseData.translatedText;
-                }
-            } catch (err) {
-                console.error('Translation error:', err);
-            } finally {
-                btn.textContent = originalText;
-                btn.disabled = false;
-            }
-        }
-
-        checkUser();
     </script>
+    <script src="admin.js"></script>
 </body>
 
 </html>
