--- a/admin.html
+++ b/admin.html
@@ -344,11 +344,18 @@
                         </div>
 
                         <div class="form-group">
-                            <label>Imagem da Obra *</label>
-                            <input type="file" id="image-file" accept="image/*" style="margin-bottom: 0.5rem;">
-                            <input type="text" id="image-url" placeholder="Ou cole um URL externo">
-                            <div id="upload-status" style="font-size: 0.8rem; margin-top: 0.5rem; color: #888;"></div>
+                            <label>Imagem do Produto</label>
+                            <input type="file" id="image-file" accept="image/*">
+                            <input type="text" id="image-url" placeholder="URL da imagem (automático)" readonly>
                         </div>
+
+                        <div class="form-group">
+                            <label>Ficheiro de Media (Áudio/Vídeo) <small>Opcional</small></label>
+                            <input type="file" id="media-file" accept="audio/*,video/*">
+                            <input type="text" id="media-url" placeholder="URL do media (automático)" readonly>
+                        </div>
+                        <div id="upload-status" style="font-size: 0.8rem; margin-top: 0.5rem; color: #888;"></div>
+
 
                         <div style="display: flex; gap: 1rem;">
                             <button type="submit" id="submit-btn" class="btn btn-primary">Salvar Produto</button>
