--- a/index.html
+++ b/index.html
@@ -120,14 +120,13 @@
                     <div class="contact__info">
                         <div class="contact__card">
                             <h4>Email</h4>
-                            <a href="mailto:hello@okapadesign.com">hello@okapadesign.com</a>
+                            <a href="mailto:okapadesign@gmail.com">okapadesign@gmail.com</a>
                         </div>
                         <div class="contact__card">
                             <h4>Localização</h4>
                             <p>Lisboa, Portugal</p>
                         </div>
                         <div class="contact__social">
-                            <a href="#" class="social-link">Instagram</a>
                             <a href="#" class="social-link">Facebook</a>
                         </div>
                     </div>
