Content: Added Facebook link

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                             <p>Lisboa, Portugal</p>
                         </div>
                         <div class="contact__social">
-                            <a href="#" class="social-link">Facebook</a>
+                            <a href="https://facebook.com/okapadesign" class="social-link" target="_blank"
+                                rel="noopener noreferrer">Facebook</a>
                         </div>
                     </div>
                 </div>
