Content: Added TikTok link placeholder

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
                         <div class="contact__social">
                             <a href="https://facebook.com/okapadesign" class="social-link" target="_blank"
                                 rel="noopener noreferrer">Facebook</a>
+                            <a href="https://tiktok.com/@okapadesign" class="social-link" target="_blank"
+                                rel="noopener noreferrer">TikTok</a>
                         </div>
                     </div>
                 </div>
