--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                         <div class="contact__social">
                             <a href="https://facebook.com/okapadesign" class="social-link" target="_blank"
                                 rel="noopener noreferrer">Facebook</a>
+                            <a href="https://instagram.com/okapadesign" class="social-link" target="_blank"
+                                rel="noopener noreferrer">Instagram</a>
+                            <a href="https://youtube.com/@okapadesign" class="social-link" target="_blank"
+                                rel="noopener noreferrer">YouTube</a>
                             <a href="https://tiktok.com/@okapadesign" class="social-link" target="_blank"
                                 rel="noopener noreferrer">TikTok</a>
                         </div>
