Content: Updated hero slogan to 'Arte é para todos'

--- a/admin.html
+++ b/admin.html
@@ -332,7 +332,10 @@
 
                         <div class="form-group">
                             <label>Descrição (PT)</label>
-                            <textarea id="desc" placeholder="Ex: Acrílico sobre tela"></textarea>
+                            <div style="display: flex; gap: 0.5rem; margin-bottom: 0.5rem;">
+                                <textarea id="desc" rows="5" maxlength="800"
+                                    placeholder="Descrição detalhada em Português" required></textarea>
+                            </div>
                         </div>
 
                         <div class="form-group">
