--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="hero__bg"></div>
             <div class="hero__content container">
                 <span class="hero__subtitle" data-i18n="hero.subtitle">Pinturas Originais & Arte Digital</span>
-                <h1 class="hero__title" data-i18n="hero.title">Arte é para <span class="text-accent"
+                <h1 class="hero__title"><span data-i18n="hero.title">Arte é para</span> <span class="text-accent"
                         data-i18n="hero.title_accent">todos</span></h1>
                 <p class="hero__description" data-i18n="hero.desc">Quadros únicos e designs de lettering para t-shirts,
                     garrafas térmicas e muito mais.</p>
