Content: Updated YouTube link to klaudiamusicrave

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 rel="noopener noreferrer">Facebook</a>
                             <a href="https://instagram.com/okapadesign" class="social-link" target="_blank"
                                 rel="noopener noreferrer">Instagram</a>
-                            <a href="https://youtube.com/@okapadesign" class="social-link" target="_blank"
+                            <a href="https://youtube.com/@klaudiamusicrave" class="social-link" target="_blank"
                                 rel="noopener noreferrer">YouTube</a>
                             <a href="https://tiktok.com/@okapadesign" class="social-link" target="_blank"
                                 rel="noopener noreferrer">TikTok</a>
