SEO: Added Open Graph and improved meta tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="okapadesign - Pinturas Originais e Arte Digital para Merchandising. Quadros únicos e designs para t-shirts, garrafas e mais.">
-    <title>okapadesign | Pinturas & Arte Digital</title>
+        content="OkapaDesign - Pinturas Originais, Arte Digital e Lettering. Encontre quadros únicos e designs exclusivos para merchan, t-shirts e decoração. Arte é para todos.">
+    <meta name="keywords"
+        content="arte digital, pinturas originais, lettering, quadros, decoração, okapadesign, arte portugal, merchandising">
+    <meta name="author" content="OkapaDesign">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://okapadesign.com/">
+    <meta property="og:title" content="OkapaDesign | Arte é para todos">
+    <meta property="og:description"
+        content="Descubra pinturas originais e arte digital única. Transforme o seu espaço com designs exclusivos.">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://okapadesign.com/">
+    <meta property="twitter:title" content="OkapaDesign | Arte é para todos">
+    <meta property="twitter:description"
+        content="Descubra pinturas originais e arte digital única. Transforme o seu espaço com designs exclusivos.">
+    <meta property="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+
+    <title>OkapaDesign | Pinturas & Arte Digital</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
