Deploy: Force push of all pending UI content (Modal + About Note)

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
                             moderno.</p>
                         <p>Crio quadros únicos para decoração e designs de lettering prontos para estampar em t-shirts,
                             garrafas térmicas e outros produtos.</p>
+                        <p style="font-style: italic; color: var(--color-accent); margin-top: 1rem;">
+                            <strong>Nota:</strong> Convido amigos para exporem os seus trabalhos no site okapadesign.
+                            Cada encomenda é tratada pessoalmente via email do autor.
+                        </p>
                         <div class="about__stats">
                             <div class="stat"><span class="stat__number">50+</span><span>Obras</span></div>
                             <div class="stat"><span class="stat__number">30+</span><span>Clientes</span></div>
@@ -123,6 +127,10 @@
                 <div class="section__header">
                     <span class="section__subtitle">Contato</span>
                     <h2 class="section__title">Vamos Conversar</h2>
+                    <p style="max-width: 600px; margin: 1rem auto; text-align: center; color: var(--color-text-muted);">
+                        Gostou do produto? Na okapadesign gostamos de tratar de cada encomenda pessoalmente. Assim,
+                        entre em contato via e-mail do autor ou para o e-mail geral.
+                    </p>
                 </div>
                 <div class="contact__content">
                     <form class="contact__form" id="contact-form">
