--- a/index.html
+++ b/index.html
@@ -214,7 +214,14 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js?v=2"></script>
+    <script>
+        window.addEventListener('error', function (e) {
+            console.error('Global Error caught:', e.message);
+            // Optionally alert user only if it looks critical
+            // alert('Debug: ' + e.message);
+        });
+    </script>
+    <script src="script.js?v=3"></script>
 </body>
 
 </html>
