Fix: Buy button modal with correct message

--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@
             <button class="modal__close" onclick="closeBuyModal()">✕</button>
             <h3 class="modal__title">Como encomendar</h3>
             <div class="modal__body">
-                <p>Gostou do produto? Na <strong>OkapaDesign</strong> gostamos de tratar de cada encomenda pessoalmente.
-                </p>
-                <p>Assim, entre em contato via e-mail do autor ou para o e-mail geral.</p>
+                <p>Gostou do produto? Na okapadesign gostamos de tratar de cada encomenda pessoalmente. Assim, entre em
+                    contato via e-mail do autor ou para o e-mail geral.</p>
                 <div style="margin-top: 2rem; display: flex; gap: 1rem; flex-wrap: wrap;">
                     <a id="modal-email-btn" href="#" class="btn btn--primary"
                         style="width: 100%; justify-content: center;">Enviar Email Agora</a>
