--- a/admin.html
+++ b/admin.html
@@ -136,8 +136,128 @@
         }
 
         .products-list {
-            max-height: 500px;
+            max-height: none;
+            overflow-y: visible;
+        }
+
+        .products-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .products-table th,
+        .products-table td {
+            padding: 0.75rem;
+            text-align: left;
+            border-bottom: 1px solid #333;
+        }
+
+        .products-table th {
+            background: #0a0a0a;
+            color: #d4a574;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            position: sticky;
+            top: 0;
+        }
+
+        .products-table tr:hover {
+            background: rgba(212, 165, 116, 0.05);
+        }
+
+        .products-table img {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            border-radius: 4px;
+        }
+
+        .search-bar {
+            display: flex;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .search-bar input {
+            flex: 1;
+        }
+
+        .pagination {
+            display: flex;
+            justify-content: center;
+            gap: 0.5rem;
+            margin-top: 1rem;
+        }
+
+        .pagination button {
+            width: 36px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #0a0a0a;
+            border: 1px solid #333;
+            color: #888;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: 0.2s;
+        }
+
+        .pagination button:hover,
+        .pagination button.active {
+            border-color: #d4a574;
+            color: #d4a574;
+        }
+
+        .pagination button.active {
+            background: #d4a574;
+            color: #0a0a0a;
+        }
+
+        .stats-bar {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .stat-card {
+            background: #0a0a0a;
+            padding: 0.75rem 1rem;
+            border-radius: 4px;
+            border: 1px solid #333;
+            flex: 1;
+            min-width: 100px;
+        }
+
+        .stat-card .number {
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #d4a574;
+        }
+
+        .stat-card .label {
+            font-size: 0.75rem;
+            color: #888;
+            text-transform: uppercase;
+        }
+
+        .products-wrapper {
+            max-height: 600px;
             overflow-y: auto;
+            border: 1px solid #333;
+            border-radius: 4px;
+        }
+
+        .category-badge {
+            display: inline-block;
+            padding: 0.2rem 0.5rem;
+            font-size: 0.65rem;
+            border-radius: 3px;
+            text-transform: uppercase;
+            background: rgba(212, 165, 116, 0.2);
+            color: #d4a574;
         }
 
         .product-item {
@@ -382,9 +502,36 @@
 
                 <div class="card">
                     <h2>📦 Produtos (<span id="count">0</span>)</h2>
-                    <div id="products-list" class="products-list">
-                        <div class="empty">Carregando...</div>
+                    <div class="search-bar">
+                        <input type="text" id="search-products" placeholder="🔍 Pesquisar produtos...">
+                        <select id="filter-category" style="width: auto;">
+                            <option value="">Todas categorias</option>
+                            <option value="paintings">Quadros</option>
+                            <option value="lettering">Digital</option>
+                            <option value="3d">2D/3D</option>
+                            <option value="music">Música</option>
+                            <option value="merch">Merch</option>
+                        </select>
                     </div>
+                    <div class="products-wrapper">
+                        <table class="products-table">
+                            <thead>
+                                <tr>
+                                    <th>Imagem</th>
+                                    <th>Título</th>
+                                    <th>Categoria</th>
+                                    <th>Preço</th>
+                                    <th>Ações</th>
+                                </tr>
+                            </thead>
+                            <tbody id="products-list">
+                                <tr>
+                                    <td colspan="5" class="empty">Carregando...</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="pagination" id="pagination"></div>
                 </div>
             </div>
 
